# ChangeLog for xfce-base/xfce-utils
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.165 2010/11/07 12:45:16 ssuominen Exp $

  07 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> files/Gentoo:
  Update vendor info.

*xfce-utils-4.7.1 (07 Nov 2010)

  07 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce-utils-4.7.1.ebuild:
  Version bump.

  28 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  -xfce-utils-4.6.2-r1.ebuild,
  -files/xfce-utils-4.6.x-ck-launch-session.patch:
  Don't mess with ck-launch-session from xinitrc.

  09 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  xfce-utils-4.7.0.ebuild, +files/xfce-utils-4.7.0-ck-launch-session.patch:
  Don't mess with ck-launch-session from xinitrc.

  07 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  xfce-utils-4.7.0.ebuild:
  Don't show xfhelp4.desktop in menu because it's outdated and doesn't work
  with ${PF}. Install HTML documentation to ${PF}.

*xfce-utils-4.7.0 (05 Sep 2010)

  05 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce-utils-4.7.0.ebuild:
  Version bump.

  29 Aug 2010; Raúl Porcel <armin76@gentoo.org> xfce-utils-4.6.2.ebuild:
  alpha/ia64/sparc stable wrt #323729

  11 Aug 2010; Joseph Jezak <josejx@gentoo.org> xfce-utils-4.6.2.ebuild:
  Marked ppc stable for bug #323729.

  10 Aug 2010; Jeroen Roovers <jer@gentoo.org> xfce-utils-4.6.2.ebuild:
  Stable for HPPA (bug #323729).

*xfce-utils-4.6.2-r1 (06 Aug 2010)

  06 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce-utils-4.6.2-r1.ebuild,
  +files/xfce-utils-4.6.x-ck-launch-session.patch:
  Run xfce4-session with ck-launch-session if found.

  23 Jul 2010; Markus Meier <maekke@gentoo.org> xfce-utils-4.6.2.ebuild:
  arm stable, bug #323729

  09 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  xfce-utils-4.6.2.ebuild:
  ppc64 stable wrt #323729

  30 Jun 2010; Christian Faulhammer <fauli@gentoo.org>
  xfce-utils-4.6.2.ebuild: