@@ -2,6 +2,6 @@ AUX Gentoo 235 RMD160 17e7074ba5d4f8eb7489f17b923e56781938ef73 SHA1 b804c2f29e4e
 DIST xfce-utils-4.6.2.tar.bz2 638094 RMD160 06c33863da0f80f16ef154307e4b89085bc3958f SHA1 6373886c3d70e576859741bde747a235567ffd8e SHA256 54efc2038bfbd5acaadfc91ed91fb3dfd6cec64f9402f364accce7bcafe2ba7a
 DIST xfce-utils-4.7.1.tar.bz2 699455 RMD160 46ce8c6ac028a17fd006c976bbb46b9338855e8c SHA1 c3997bf88bcfd3eec2c0ee2b96dde58b1931e7f3 SHA256 330c0dae381c30ba756497d316c222111852b511e20c033a446e8f23acd67892
 EBUILD xfce-utils-4.6.2.ebuild 1514 RMD160 ee2634622cbf9fa66a34a0fa2e0708019fbd4c03 SHA1 3c1ce8e49e68c6ba46e3a48db8340e47479448bf SHA256 8e63762eeab2f206cc5ccbc1fc72a765452263995241da48b64937ce3f2f2fcd
-EBUILD xfce-utils-4.7.1.ebuild 1491 RMD160 e688cdb6bbb5c22108789cbfbc7ba8b04507a526 SHA1 09d4a26fe05230de6670df2bcffaa17cbdd599f9 SHA256 7d8d160555535a883d572ca1985e7a6f01e69d10f0cf4ee63ff568961cca7a0a
-MISC ChangeLog 20457 RMD160 55cde09ff37af518ba0f8f87c44bf399f5c54c0d SHA1 0ac85a162b22f70f1fb0cb2c1fc9bf96fd2c0cc3 SHA256 7347dbea455fc951fd3b5c65dac69032bcd03625ebe436ecb8f479451562abb4
+EBUILD xfce-utils-4.7.1.ebuild 1554 RMD160 5eba4169d9891eecd6331f2480c221a542f0d4f8 SHA1 d690afe6c6046c711447f51b30bd2fa7865859a3 SHA256 7d3b8d432ba828ab6a132ad4311b1615accbeb727199f1d03637f6d2d617eb30
+MISC ChangeLog 20592 RMD160 88d34afc8da3d4604fd7a73cf5c3afc523db43da SHA1 4b30de460d254d067d8170fdd5fca652d09d72b1 SHA256 80d5586bfed3f9b41736d1df712ba5c77473563a4c422c4a45e51533cb3fbe1e
 MISC metadata.xml 218 RMD160 e064747a2c888959d939ed09a70c242d905c89ea SHA1 8ff18a8acc37d299a3cc7b30663ca3eb0f91032e SHA256 c47df69ae42900828c5afb0aa77ee6f9ddca55a79b3326f69a0bbf8119f3d5df
