@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/xfce-utils-4.7.1.ebuild,v 1.1 2010/11/07 10:27:02 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/xfce-utils-4.7.1.ebuild,v 1.2 2010/11/11 09:22:14 ssuominen Exp $
 
 EAPI=3
 inherit xfconf
@@ -14,18 +14,20 @@ SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x86-solaris"
 IUSE="dbus debug +lock"
 
-RDEPEND="x11-apps/xrdb
-	x11-libs/libX11
+COMMON_DEPEND="x11-libs/libX11
 	>=x11-libs/gtk+-2.10:2
 	>=xfce-base/libxfce4util-4.6
 	>=xfce-base/libxfce4ui-4.7
 	>=xfce-base/xfconf-4.6
-	dbus? ( >=dev-libs/dbus-glib-0.70 )
+	dbus? ( >=dev-libs/dbus-glib-0.70 )"
+RDEPEND="${COMMON_DEPEND}
+	x11-apps/xrdb
+	x11-misc/xdg-user-dirs
 	lock? ( || ( x11-misc/xscreensaver
 		gnome-extra/gnome-screensaver
 		x11-misc/xlockmore
 		x11-misc/slock ) )"
-DEPEND="${RDEPEND}
+DEPEND="${COMMON_DEPEND}
 	dev-util/intltool
 	dev-util/pkgconfig
 	sys-devel/gettext"
