@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfce-utils
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.165 2010/11/07 12:45:16 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.166 2010/11/11 09:22:14 ssuominen Exp $
+
+  11 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
+  xfce-utils-4.7.1.ebuild:
+  Fix missing x11-misc/xdg-user-dirs runtime depend.
 
   07 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> files/Gentoo:
   Update vendor info.
